Substantial refactoring. Use PrimeRefIntfc as node vertex in graph so graph has access to the underlying model data.